Deploy on server (Tomcat 9 + Java 8)